0.7.0 - currently working on
- [#3677] Fix: Return-path in e-mails has additional <> around it when forceReturnPath is used
- [#3670] Fix: PEAR classes can get included twice
- [#3673] Fix: Model::existsKey returns false for null data
- [#3556] Fix: Use PATH_tslib in require once for tslib_content
- [#3550] Fix: getUid should return an integer, not a string
- [#3659] Fix: getSubpart('foo') fails for certain characters within the subpart delimiters
- [#3372] Fix: Umlauts not encoded correctly in the e-mail headers (again)
- [#3656] Fix: Don't use TYPO3_branch or compat_version
- [#3657] Fix: ObjectFactory::make needs to pass an array to call_user_func_array
- [#3641] Change: Update all copyrights to 2010
- [#3322] Fix: Return-Path needs to have <> around the e-mail address
- [#3606] Feature: Add a getter for the last login to the FE user model
- [#3562] Fix: Warning in EM: XCLASS line for PriceViewHelper is wrong
- [#3551] Fix: The configuration registry needs to make sure the configuration is loaded in the FE
- [#3537] Feature: Feature: Add tx_oelib_DataMapper::cacheModelByCombinedKeys
- [#2469] Feature: Allow additional keys for models in the mappers
- [#3524] Fix: VisibilityTree::makeNodesVisible needs to check the existence of nodes
- [#3518] Fix: oelib_db::count should also accept joined tables
- [#3516] Feature: Extend oelib_db::selectSingle to accept orderBy and offset
- [#3460] Fix: Locale configcheck crashes TYPO3 Winstaller
- [#3500] Fix: Don't crash the priceViewHelper if the currency has not been set or is invalid
- [#3508] Cleanup: Replace space + tab with tab
- [#3488] Fix: tx_oelib_db::count returns a string instead of an integer
- [#3492] Feature: Add a price view helper
- [#3487] Feature: Add MapperRegistry::set
- [#3490] Feature: Add model and mapper for static_currencies
- [#3491] Change: Allow prices with 3 decimal digits
- [#3482] Feature: Add a method getAsMultidimensionalArray() to tx_oelib_Configuration